--- a/config.json
+++ b/config.json
@@ -1,5 +1,10 @@
 {
     "embedcolor":"#ff6600",
     "botname":"XnamBot",
-    "botimage":""
+    "botimage":"",
+    "prefixarray":[
+        "|",
+        "Xnam!",
+        "xnam!"
+    ]
 }
