--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:db": "node scripts/dev-db.js"
+    "dev:db": "node scripts/dev-db.js",
+    "prod:pkg:build": "pkg src/index.js"
   },
   "repository": {
     "type": "git",
