--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@sapphire/utilities": "^3.1.0",
     "discord.js": "^13.3.1",
     "dotenv-cra": "^3.0.2",
+    "node-fetch": "^2.6.6",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
