--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "typescript": "^4.5.2"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --build --clean",
     "watch": "tsc -w",
     "start": "node dist/index.js",
     "dev": "run-s build start",
