--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "discord.js": "^13.3.1",
     "dotenv-cra": "^3.0.2",
     "node-fetch": "^2.6.6",
+    "quick.db": "^7.1.3",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
