--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sapphire/framework": "^2.2.0",
     "@sapphire/plugin-api": "^3.1.0",
     "@sapphire/plugin-editable-commands": "^1.1.1",
+    "@sapphire/plugin-hmr": "^1.0.1",
     "@sapphire/plugin-logger": "^2.1.0",
     "@sapphire/plugin-subcommands": "^2.1.0",
     "@sapphire/time-utilities": "^1.4.9",
