--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@sapphire/discord-utilities": "^2.2.3",
     "@sapphire/discord.js-utilities": "^4.1.3",
     "@sapphire/fetch": "^2.0.3",
-    "@sapphire/framework": "^2.2.0",
+    "@sapphire/framework": "^3.0.0-next.18259a7.0",
     "@sapphire/plugin-api": "^3.1.0",
     "@sapphire/plugin-editable-commands": "^1.1.1",
     "@sapphire/plugin-logger": "^2.1.0",
@@ -18,6 +18,7 @@
     "@sapphire/time-utilities": "^1.4.9",
     "@sapphire/type": "^2.1.2",
     "@sapphire/utilities": "^3.1.0",
+    "discord-api-types": "^0.26.1",
     "discord.js": "^13.3.1",
     "dotenv-cra": "^3.0.2",
     "node-fetch": "^2.6.6",
