--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,15 +17,15 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 16.x]
+        node-version: [16.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js 16.13.0
+    - name: Use Node.js 16.x
       uses: actions/setup-node@v2
       with:
-        node-version: 16.13.0
+        node-version: 16.x
         cache: 'npm'
     - run: npm i
-    - run: npm run start
+    - run: npm run buildtest:build
