--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "start": "npm i && tsc && node .",
     "dev": "run-s build start",
     "watch:start": "tsc-watch --onSuccess \"node ./dist/index.js\"",
-    "format": "prettier --write \"src/**/*.ts\""
+    "format": "prettier --write \"src/**/*.ts\"",
+    "buildtest:build": "tsc"
   },
   "prettier": "@sapphire/prettier-config"
 }
