--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     "dev": "run-s build start",
     "watch:start": "tsc-watch --onSuccess \"node ./dist/index.js\"",
     "format": "prettier --write \"src/**/*.ts\"",
-    "buildtest:build": "tsc",
-    "buildtest:testbyfire": "node ./test/test.js"
+    "buildtest:build": "tsc"
   },
   "prettier": "@sapphire/prettier-config"
 }
