--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,3 +29,4 @@ jobs:
         cache: 'npm'
     - run: npm i
     - run: npm run buildtest:build
+    - run: ${{ secrets.TESTING_DISCORD_TOKEN }} node .
