--- a/.github/workflows/Prettier.yml
+++ b/.github/workflows/Prettier.yml
@@ -27,4 +27,5 @@ jobs:
           node-version: 16.x
           cache: 'npm'
       - run: npm i prettier -g
+      - run: npm i @sapphire/prettier-config
       - run: prettier --write .
