--- a/.github/workflows/PrettierCheck.yml
+++ b/.github/workflows/PrettierCheck.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Prettier
+name: PrettierCheck
 
 on:
   push:
@@ -28,4 +28,4 @@ jobs:
           cache: 'npm'
       - run: npm i prettier -g
       - run: npm i @sapphire/prettier-config
-      - run: prettier --write .
+      - run: prettier --check .
