--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"@sapphire/discord-utilities": "^2.2.3",
 		"@sapphire/discord.js-utilities": "^4.1.3",
 		"@sapphire/fetch": "^2.0.3",
-		"@sapphire/framework": "^2.2.0",
+		"@sapphire/framework": "^3.0.0-next.85b241e.0",
 		"@sapphire/plugin-api": "^3.1.0",
 		"@sapphire/plugin-logger": "^2.1.0",
 		"@sapphire/plugin-subcommands": "^2.1.0",
