--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"dotenv-cra": "^3.0.2",
 		"node-fetch": "^2.6.6",
 		"quick.db": "^7.1.3",
-		"reflect-metadata": "^0.1.13"
+		"reflect-metadata": "^0.1.13",
+		"xnam-api": "^0.0.1"
 	},
 	"devDependencies": {
 		"@sapphire/prettier-config": "^1.2.6",
