--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions//checvkout@v2
+      uses: actions/checkout@v2
     - name: Setup Build
       uses: docker/setup-buildx-action@v1
     - name: Login To Hub
