--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
 		"dev": "run-s build start",
 		"watch:start": "tsc-watch --onSuccess \"node ./dist/index.js\"",
 		"format": "prettier --write \"src/**/*.ts\"",
-		"buildtest:build": "tsc"
+		"buildtest:build": "tsc",
+		"prod": "tsc && NODE_ENV node ."
 	},
 	"prettier": "@sapphire/prettier-config"
 }
