--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"license": "UNLICENSE",
 	"dependencies": {
 		"@discordjs/collection": "^0.3.2",
+		"@kaname-png/plugin-statcord": "^1.3.2",
 		"@sapphire/decorators": "^3.1.4",
 		"@sapphire/discord-utilities": "^2.2.3",
 		"@sapphire/discord.js-utilities": "^4.1.3",
