--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"discord.js": "^13.3.1",
 		"dotenv-cra": "^3.0.2",
 		"node-fetch": "^2.6.6",
-		"quick.db": "^7.1.3",
+		"quick.db": "github:plexidev/quick.db#tempfix-typescript-1",
 		"reflect-metadata": "^0.1.13",
 		"xnam-api": "^0.0.4"
 	},
